[package]
name = "Delos"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
chrono = "0.4"
secp256k1 = { version = "0.27", features = ["rand-std", "bitcoin_hashes"] }
tokio={ version = "1.0", features = ["full"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"]}
rand = "0.8.5"